// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the html structure of a CardSlot with a single search result, image selected 1`] = `
.c1 {
  z-index: 1;
  opacity: 1;
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  outline: solid 1px #ffffff00;
  -webkit-transition: outline 0.2s ease-in-out;
  transition: outline 0.2s ease-in-out;
}

.c2:hover {
  outline-color: #ffffffff;
  cursor: pointer;
}

.c0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        aria-label="select-front0"
        class="card-select"
      >
        <i
          aria-label="front0-unchecked"
          class="bi bi-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="c0 rounded-lg shadow-lg ratio ratio-7x5"
      >
        <img
          alt="Card 1"
          class="c1 card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="c2 mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <p
        class="mpccard-counter text-center align-middle"
      >
        1 / 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot with a single search result, no image selected 1`] = `
.c1 {
  z-index: 1;
  opacity: 1;
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  outline: solid 1px #ffffff00;
  -webkit-transition: outline 0.2s ease-in-out;
  transition: outline 0.2s ease-in-out;
}

.c2:hover {
  outline-color: #ffffffff;
  cursor: pointer;
}

.c0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        aria-label="select-front0"
        class="card-select"
      >
        <i
          aria-label="front0-unchecked"
          class="bi bi-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="c0 rounded-lg shadow-lg ratio ratio-7x5"
      >
        <img
          alt="Card 1"
          class="c1 card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="c2 mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <p
        class="mpccard-counter text-center align-middle"
      >
        1 / 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot with a single search result, slot selected 1`] = `
.c1 {
  z-index: 1;
  opacity: 1;
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  outline: solid 1px #ffffff00;
  -webkit-transition: outline 0.2s ease-in-out;
  transition: outline 0.2s ease-in-out;
}

.c2:hover {
  outline-color: #ffffffff;
  cursor: pointer;
}

.c0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        aria-label="select-front0"
        class="card-select"
      >
        <i
          aria-label="front0-checked"
          class="bi bi-check-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="c0 rounded-lg shadow-lg ratio ratio-7x5"
      >
        <img
          alt="Card 1"
          class="c1 card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="c2 mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <p
        class="mpccard-counter text-center align-middle"
      >
        1 / 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot with multiple search results, image selected 1`] = `
.c2 {
  z-index: 0;
  opacity: 0;
}

.c1 {
  z-index: 1;
  opacity: 1;
}

.c1:hover {
  cursor: pointer;
}

.c3 {
  outline: solid 1px #ffffff00;
  -webkit-transition: outline 0.2s ease-in-out;
  transition: outline 0.2s ease-in-out;
}

.c3:hover {
  outline-color: #ffffffff;
  cursor: pointer;
}

.c0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  data-testid="front-slot0"
>
  <div
    class="mpccard mpccard-hover card"
  >
    <div
      class="pb-0 text-center card-header"
    >
      <p
        class="mpccard-slot"
      >
        Slot 1
      </p>
      <button
        aria-label="select-front0"
        class="card-select"
      >
        <i
          aria-label="front0-unchecked"
          class="bi bi-square"
        />
      </button>
      <button
        class="remove"
      >
        <i
          aria-label="remove-front0"
          class="bi bi-x-circle"
        />
      </button>
    </div>
    <div>
      <div
        class="c0 rounded-lg shadow-lg ratio ratio-7x5"
      >
        <img
          alt="Card 1"
          class="c1 card-img card-img-fade-in"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
        <img
          alt="Card 2"
          class="c2 card-img"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
        <img
          alt="Card 3"
          class="c2 card-img"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src=""
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="mb-0 text-center card-body"
      >
        <div
          class="c3 mpccard-name card-subtitle h6"
        >
          Card 1
        </div>
        <div
          class="mpccard-spacing"
        >
          <p
            class="mpccard-source card-text"
          >
            Source 1 [1200 DPI]
          </p>
        </div>
      </div>
    </div>
    <div
      class="padding-top card-footer"
      style="padding-top: 50px;"
    >
      <button
        class="mpccard-counter-btn btn btn-outline-info"
        type="button"
      >
        1
         / 
        3
      </button>
      <div>
        <button
          class="prev btn btn-outline-info"
          type="button"
        >
          ❮
        </button>
        <button
          class="next btn btn-outline-info"
          type="button"
        >
          ❯
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot's grid selector, cards faceted by source 1`] = `
.c1 {
  z-index: 1;
  opacity: 1;
}

.c1:hover {
  cursor: auto;
}

.c0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  class="modal-dialog modal-xl modal-dialog-scrollable"
  data-testid="front-slot0-grid-selector"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        Select Version
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="d-grid p-0 modal-body"
    >
      <div
        class=""
        style="background-color: rgb(78, 93, 107); z-index: 100;"
      >
        <hr
          class="mt-0"
        />
        <div
          class="d-flex ps-3 pe-3 hstack gap-2"
        >
          <h4>
            Jump to Version
          </h4>
          <button
            class="ms-auto bg-transparent border-0"
          >
            <h4
              class="bi bi-chevron-left rotate-neg90"
              style="transition: all 0.25s 0s;"
            />
          </button>
        </div>
        <hr
          class="mb-0"
        />
      </div>
      <div
        class="py-2"
      />
      <div
        class="collapse"
      >
        <form
          class="px-3"
          id="jumpToVersionForm"
        >
          <div
            class="g-0 row"
          >
            <div
              class="col-lg-3 col-md-5"
            >
              <label
                class="form-label"
              >
                Specify Option Number, 
                <b>
                  or...
                </b>
              </label>
              <input
                class="form-control"
                pattern="[0-9]*"
                placeholder="1"
                type="number"
                value=""
              />
            </div>
            <div
              class="col-lg-9 col-md-7"
            >
              <label
                class="form-label"
              >
                Specify ID
              </label>
              <input
                class="form-control"
                placeholder="abc123"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="d-grid gap-0 pt-3"
          >
            <button
              aria-label="jump-to-version-submit"
              class="btn btn-primary"
              disabled=""
              form="jumpToVersionForm"
              type="submit"
            >
              Select This Version
            </button>
          </div>
        </form>
        <hr />
      </div>
      <div
        class="px-3 pb-3"
      >
        <div
          class="row"
        >
          <h4>
            Browse Versions
          </h4>
          <div
            class="col-md-8 col-sm-6"
          >
            <div
              class="hstack gap-2"
            >
              <span
                class="me-auto"
              >
                Show All Cards...
              </span>
              <div
                class="btn toggle btn-md off btn-info"
                role="button"
                style="width: 100%; height: 38px;"
              >
                <div
                  class="toggle-group"
                >
                  <span
                    class="btn toggle-on btn-md flex-centre btn-success"
                  >
                    Grouped By Source
                  </span>
                  <span
                    class="btn toggle-off btn-md flex-centre btn-info"
                  >
                    Grouped Together
                  </span>
                  <span
                    class="toggle-handle btn btn-md btn-default"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-0 px-3 row row-cols-xxl-6 row-cols-xl-6 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-2"
      >
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-highlight card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 1
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 1"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 1
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-hover card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 2
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 2"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 2
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-hover card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 3
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 3"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 3
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-hover card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 4
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 4"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 4
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`the html structure of a CardSlot's grid selector, cards grouped together 1`] = `
.c1 {
  z-index: 1;
  opacity: 1;
}

.c1:hover {
  cursor: auto;
}

.c0 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

<div
  class="modal-dialog modal-xl modal-dialog-scrollable"
  data-testid="front-slot0-grid-selector"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        Select Version
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="d-grid p-0 modal-body"
    >
      <div
        class=""
        style="background-color: rgb(78, 93, 107); z-index: 100;"
      >
        <hr
          class="mt-0"
        />
        <div
          class="d-flex ps-3 pe-3 hstack gap-2"
        >
          <h4>
            Jump to Version
          </h4>
          <button
            class="ms-auto bg-transparent border-0"
          >
            <h4
              class="bi bi-chevron-left rotate-neg90"
              style="transition: all 0.25s 0s;"
            />
          </button>
        </div>
        <hr
          class="mb-0"
        />
      </div>
      <div
        class="py-2"
      />
      <div
        class="collapse"
      >
        <form
          class="px-3"
          id="jumpToVersionForm"
        >
          <div
            class="g-0 row"
          >
            <div
              class="col-lg-3 col-md-5"
            >
              <label
                class="form-label"
              >
                Specify Option Number, 
                <b>
                  or...
                </b>
              </label>
              <input
                class="form-control"
                pattern="[0-9]*"
                placeholder="1"
                type="number"
                value=""
              />
            </div>
            <div
              class="col-lg-9 col-md-7"
            >
              <label
                class="form-label"
              >
                Specify ID
              </label>
              <input
                class="form-control"
                placeholder="abc123"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="d-grid gap-0 pt-3"
          >
            <button
              aria-label="jump-to-version-submit"
              class="btn btn-primary"
              disabled=""
              form="jumpToVersionForm"
              type="submit"
            >
              Select This Version
            </button>
          </div>
        </form>
        <hr />
      </div>
      <div
        class="px-3 pb-3"
      >
        <div
          class="row"
        >
          <h4>
            Browse Versions
          </h4>
          <div
            class="col-md-8 col-sm-6"
          >
            <div
              class="hstack gap-2"
            >
              <span
                class="me-auto"
              >
                Show All Cards...
              </span>
              <div
                class="btn toggle btn-md off btn-info"
                role="button"
                style="width: 100%; height: 38px;"
              >
                <div
                  class="toggle-group"
                >
                  <span
                    class="btn toggle-on btn-md flex-centre btn-success"
                  >
                    Grouped By Source
                  </span>
                  <span
                    class="btn toggle-off btn-md flex-centre btn-info"
                  >
                    Grouped Together
                  </span>
                  <span
                    class="toggle-handle btn btn-md btn-default"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-0 px-3 row row-cols-xxl-6 row-cols-xl-6 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-2"
      >
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-highlight card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 1
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 1"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 1
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-hover card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 2
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 2"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 2
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-hover card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 3
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 3"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 3
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="renderIfVisible "
          style="height: 300px;"
        >
          <div>
            <div
              class="mpccard mpccard-hover card"
            >
              <div
                class="pb-0 text-center card-header"
              >
                <p
                  class="mpccard-slot"
                >
                  Option 4
                </p>
              </div>
              <div>
                <div
                  class="c0 rounded-lg shadow-lg ratio ratio-7x5"
                >
                  <img
                    alt="Card 4"
                    class="c1 card-img card-img-fade-in"
                    data-nimg="fill"
                    decoding="async"
                    loading="lazy"
                    src=""
                    style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                  />
                </div>
                <div
                  class="mb-0 text-center card-body"
                >
                  <div
                    class="mpccard-name card-subtitle h6"
                  >
                    Card 4
                  </div>
                  <div
                    class="mpccard-spacing"
                  >
                    <p
                      class="mpccard-source card-text"
                    >
                      Source 1 [1200 DPI]
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-secondary"
        type="button"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;
